--- a/pom.xml
+++ b/pom.xml
@@ -920,7 +920,7 @@
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-jdbc</artifactId>
-			<version>${hive.version}</version>
+			<version>[2.3.4,)</version>
 			<classifier>standalone</classifier>
 			<exclusions>
 				<exclusion>
