--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@
 
 		<!-- SpringFramework -->
 		<spring.version>4.3.13.RELEASE</spring.version>
-		<spring.boot.version>1.5.9.RELEASE</spring.boot.version>
+		<spring.boot.version>1.5.20.RELEASE</spring.boot.version>
 		<spring.boot.admin.version>1.5.6</spring.boot.admin.version>
 		<spring.data.version>1.10.5.RELEASE</spring.data.version>
-		<spring.data.rest.version>2.6.8.RELEASE</spring.data.rest.version>
+		<spring.data.rest.version>3.1.10.RELEASE</spring.data.rest.version>
 		<spring.security.version>4.1.3.RELEASE</spring.security.version>
 		<spring.security.jwt.version>1.0.8.RELEASE</spring.security.jwt.version>
 		<spring.security.oauth.version>2.0.17.RELEASE</spring.security.oauth.version>
@@ -132,10 +132,16 @@
 			<artifactId>swagger-annotations</artifactId>
 			<version>1.5.21</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.ibatis</groupId>
 			<artifactId>ibatis-core</artifactId>
 			<version>3.0</version>
+		</dependency> -->
+		<!--mybatis-->
+		<dependency>
+		    <groupId>org.mybatis.spring.boot</groupId>
+		    <artifactId>mybatis-spring-boot-starter</artifactId>
+		    <version>1.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>io.reactivex.rxjava2</groupId>
@@ -161,11 +167,6 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.47</version>
-		</dependency>
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<version>18.3.0.0</version>
 		</dependency>
 
 		<dependency>
@@ -400,7 +401,35 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- Local jar -->
+		<dependency>
+		    <groupId>org.mozilla.intl</groupId>
+		    <artifactId>chardet</artifactId>
+		    <version>1.0</version>
+		    <scope>system</scope>
+			<systemPath>${project.basedir}/lib/chardet-1.0.jar</systemPath>
+		</dependency>
+		<dependency>
+		    <groupId>org.bson</groupId>
+		    <artifactId>bson</artifactId>
+		    <version>3.2.2</version>
+		    <scope>system</scope>
+			<systemPath>${project.basedir}/lib/bson-3.2.2.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>18.3.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/ojdbc8-18.3.0.0.jar</systemPath>
+		</dependency>
+		
 
+		<dependency>
+		    <groupId>cglib</groupId>
+		    <artifactId>cglib-nodep</artifactId>
+		    <version>2.2.2</version>
+		</dependency>
 		<!-- 스프링 Context Support (Email기능/Quartz 사용) -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -413,7 +442,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<!-- SAML -->
 		<dependency>
 			<groupId>org.springframework.security.extensions</groupId>
@@ -421,17 +449,25 @@
 			<version>1.0.3.RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-commons</artifactId>
+		    <version>2.1.10.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-core</artifactId>
 			<version>${spring.data.rest.version}</version>
 		</dependency>
-
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-rest-repository</artifactId>
+		    <version>1.0.0.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>${spring.data.version}</version>
+			<version>1.11.12.RELEASE</version>
 		</dependency>
 
 		<dependency>
@@ -1103,7 +1139,7 @@
 		<dependency>
 			<groupId>net.jodah</groupId>
 			<artifactId>failsafe</artifactId>
-			<version>2.3.1</version>
+			<version>1.1.1</version>
 		</dependency>
 		<!-- Mail -->
 		<dependency>
