--- a/pom.xml
+++ b/pom.xml
@@ -466,7 +466,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>1.11.12.RELEASE</version>
+			<version>[1.11.22,)</version>
 		</dependency>
 
 		<dependency>
