--- a/.classpath
+++ b/.classpath
@@ -40,5 +40,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/datasphere-common"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/datasphere-datasource"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
