--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<!--<parent>-->
+		<!--<groupId>org.springframework.boot</groupId>-->
+		<!--<artifactId>spring-boot-starter-parent</artifactId>-->
+		<!--<version>2.1.4.RELEASE</version>-->
+		<!--<relativePath /> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+	<!--</parent>-->
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.datasphere</groupId>
+		<artifactId>datashere</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<version>0.1.0-SNAPSHOT</version>
 	<name>datasphere-service</name>
 
 	<properties>
@@ -707,11 +711,11 @@
 			<version>4.2.1</version>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-sql</artifactId>
-			<version>4.2.1</version>
-		</dependency>
+			<version>4.2.0</version>
+		</dependency>-->
 
 		<dependency>
 			<groupId>com.querydsl</groupId>
