--- a/.classpath
+++ b/.classpath
@@ -34,6 +34,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/datasphere-common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/datasphere-datasource"/>
 	<classpathentry kind="output" path="target/classes"/>
