--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<name>datasphere-service</name>
+	<groupId>com.datasphere</groupId>
+	<description>Service</description>
+	<artifactId>datalayer</artifactId>
+	<version>1.0.0</version>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -15,7 +19,7 @@
 		<!-- common library versions -->
 
 		<!-- SpringFramework -->
-		<spring.version>4.3.13.RELEASE</spring.version>
+		<spring.version>5.2.0.RELEASE</spring.version>
 		<spring.boot.version>1.5.20.RELEASE</spring.boot.version>
 		<spring.boot.admin.version>1.5.6</spring.boot.admin.version>
 		<spring.data.version>1.10.5.RELEASE</spring.data.version>
@@ -80,10 +84,7 @@
 
 
 
-	<groupId>com.datasphere</groupId>
-	<description>Service</description>
-	<artifactId>datalayer</artifactId>
-	<version>1.0.0</version>
+	
 	
 	<dependencies>
 		<dependency>
@@ -423,6 +424,14 @@
 		    <artifactId>cglib-nodep</artifactId>
 		    <version>2.2.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-web</artifactId>
+		    <version>${spring.version}</version>
+		</dependency>
+		
 		<!-- Spring Context Support (Email feature / Quartz use) -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -1327,5 +1336,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>1.0.0</version>
+	
 </project>
